media/plex/media.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
