media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.240
spec:
  type: LoadBalancer
  ports:
    - name: pms
      port: 32400
      protocol: TCP
      targetPort: pms
    - name: http
      port: 80
      targetPort: pms
    - name: https
      port: 443
      targetPort: 32443
  selector:
    app: plex
