media/plex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - plex.int.kyledev.co
    - plex.kyledev.co
  rules:
    - backendRefs:
        - name: plex
          port: 32400
