media/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: plex
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: plex.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - plex.int.kyledev.co
      secretName: plex-kyledev-tls-prod
