media/plex/manifest.yaml
---
# Source: homelab/charts/plex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    helm.sh/chart: plex-0.1.30
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
      name: pms
    - port: 80
      targetPort: 32400
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
---
# Source: homelab/charts/plex/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    helm.sh/chart: plex-0.1.30
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
      app.kubernetes.io/instance: plex
  template:
    metadata:
      labels:
        helm.sh/chart: plex-0.1.30
        app.kubernetes.io/name: plex
        app.kubernetes.io/instance: plex
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: plex
      securityContext:
        {}
      containers:
        - name: plex
          image: "linuxserver/plex:1.43.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: pms
              containerPort: 32400
              protocol: TCP
            - name: http
              containerPort: 32400
              protocol: TCP
          volumeMounts:
            - mountPath: /movies
              name: media
              subPath: movies
            - mountPath: /tv
              name: media
              subPath: tv
            - mountPath: /config
              name: plex
              subPath: configs/plex
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: plex
          persistentVolumeClaim:
            claimName: plex-pvc
---
# Source: homelab/charts/plex/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-int
  labels:
    helm.sh/chart: plex-0.1.30
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "plex.ts.kyledev.co"
    - "plex.int.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
          weight: 1
---
# Source: homelab/charts/plex/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-public
  labels:
    helm.sh/chart: plex-0.1.30
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "plex.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
          weight: 1
---
# Source: homelab/charts/plex/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: plex
  labels:
    helm.sh/chart: plex-0.1.30
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: plex-public
  extAuth:
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: crowdsec
        port: 8080
